# pstage3-fastapi-project

./: README.md  pyproject.toml
part3/01-fastapi/: pyproject.toml
part3/01-fastapi/app/: __main__.py
part3/01-fastapi/examples/: 01_simple_webserver.py  02_path_parameter.py  03_query_parameter.py  04_optional_parameter.py  05_request_body.py  06_response_body.py  07_form.py
