[tool.poetry]
name = "pstage3-fastapi-project"
version = "0.1.0"
description = "FastAPI Test"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
torch = "^1.9.1"
efficientnet-pytorch = "^0.7.1"
python-multipart = "^0.0.5"
albumentations = "^1.1.0"
torchvision = "^0.10.1"
requests = "^2.26.0"
gunicorn = "^20.1.0"
streamlit = "^1.2.0"
opencv-python-headless = "4.5.1.48"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
